--- a/localization/en.json
+++ b/localization/en.json
@@ -8,7 +8,7 @@
 	"MAIN_MENU___APPEND_FIELD": "Append Column",
 	"MAIN_MENU___REVERSE_DB_COLLECTIONS": "AWS Glue Data Catalog tables...",
 	"MAIN_MENU___FORWARD_DB_COLLECTIONS": "AWS Glue CLI Script of Table",
-	"MAIN_MENU___FORWARD_DB_BUCKETS": "AWS Glue CLI Script of database",
+	"MAIN_MENU___FORWARD_DB_BUCKETS": "AWS Glue CLI Script of database...",
 	"TOOLBAR___ADD_BUCKET": "Add database",
 	"TOOLBAR___ADD_COLLECTION": "Add table",
 	"TOOLBAR___ADD_RELATIONSHIP": "Add Relationship",
